# Medidor

./: CMakeLists.txt  README.md  sdkconfig
html/: error.html  fonts.css  gauge.min.js  index.html  medidor.js
main/: CMakeLists.txt  Kconfig.projbuild  meterWiFi_C.c  web_client.c  web_server.c  websocket_server.c
